--- a/index.css
+++ b/index.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-image: url('https://images.unsplash.com/photo-1467810563316-b5476525c0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80');
+  /* background-image: url("https://images.unsplash.com/photo-1467810563316-b5476525c0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80"); */
+  background-image: url("https://images.pexels.com/photos/906531/pexels-photo-906531.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   height: 100vh;
   color: #fff;
-  font-family: 'Lato', sans-serif;
+  font-family: "PT Sans", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,13 +24,15 @@ body {
 
 /* Add a dark overlay */
 body::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 body * {
@@ -69,12 +72,23 @@ h1 {
   margin: 0 0 5px;
 }
 
-.loading{
-    position: absolute;
-    top:45%;
-    left:45%;
-    width:75px;
-    height:75px;
+.loading {
+  position: absolute;
+  top: 45%;
+  left: 45%;
+  width: 75px;
+  height: 75px;
+}
+#copyright {
+  font-size: 28px;
+  opacity: 0.5;
+  color: #fff;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 400;
+  padding: 0;
+  margin: 0;
 }
 
 @media (max-width: 500px) {
